[MCJ-1512] fix: 마이페이지 탭 응답 구조 수정
